hphp/hack/test/typecheck/references/pass_by_ref/reffiness_mismatch2.php
<?hh

class A {
  public function f(int &$x): void {}
}

class B extends A {
  public function f(int $x): void {}
}
